syntax = "proto3";
package proto.querystring;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "proto/examplepb/a_bit_of_everything.proto";

option go_package = "github.com/grpc-ecosystem/grpc-gateway/v2/examples/internal/proto/querystring";

message WellKnownTypesHolder {
  string payload_check = 100;
  google.protobuf.Any any = 1;
  google.protobuf.Empty empty = 2;
  google.protobuf.Struct struct = 3;
  google.protobuf.Value value = 4;
  google.protobuf.ListValue list_value = 5;
  google.protobuf.Timestamp timestamp = 6;
  google.protobuf.Duration duration = 7;
  google.protobuf.FieldMask field_mask = 8;
  google.protobuf.BoolValue bool_value = 9;
  google.protobuf.Int32Value int32_value = 10;
  google.protobuf.UInt32Value uint32_value = 11;
  google.protobuf.Int64Value int64_value = 12;
  google.protobuf.UInt64Value uint64_value = 13;
  google.protobuf.StringValue string_value = 14;
  google.protobuf.BytesValue bytes_value = 15;
  google.protobuf.DoubleValue double_value = 16;
  google.protobuf.FloatValue float_value = 17;
}

service QueryStringService {
  rpc GetEnumQuerystring(examplepb.ABitOfEverything) returns (examplepb.ABitOfEverything) {
    option (google.api.http) = {get: "/v1/querystring/enumquerystring"};
  }
  rpc GetStringQuerystring(examplepb.ABitOfEverything) returns (examplepb.ABitOfEverything) {
    option (google.api.http) = {get: "/v1/querystring/stringquerystring"};
  }
  rpc GetRepeatedEnumQuerystring(examplepb.ABitOfEverything) returns (examplepb.ABitOfEverything) {
    option (google.api.http) = {get: "/v1/querystring/repeatedenumquerystring"};
  }
  rpc GetRepeatedStringQuerystring(examplepb.ABitOfEverything) returns (examplepb.ABitOfEverything) {
    option (google.api.http) = {get: "/v1/querystring/repeatedstringquerystring"};
  }

  rpc GetTimestampQuerystring(WellKnownTypesHolder) returns (WellKnownTypesHolder) {
    option (google.api.http) = {get: "/v1/querystring/timestampquerystring"};
  }
  rpc GetWrapperQuerystring(WellKnownTypesHolder) returns (WellKnownTypesHolder) {
    option (google.api.http) = {get: "/v1/querystring/wrapperquerystring"};
  }
}
